# type-globe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.ja.md  README.md  generate_1000_questions.py
.cargo-husky/hooks/: pre-commit
.claude/: progress.md  quiz-generation-policy.md  todo.md
.github/workflows/: ci.yml  release.yml
archive/: questions_ja_v0.5.0.json
data/: listening_en.json  listening_en.yaml  listening_ja.json  listening_ja.yaml  questions_en.json  questions_ja.json
data/staging/: questions_anime.json  questions_culture.json  questions_game.json  questions_general_knowledge.json  questions_geography.json  questions_history.json  questions_it_terminology.json  questions_language.json  questions_manga.json  questions_math.json  questions_programming.json  questions_science.json  questions_technology.json  questions_vtuber_net_culture.json  questions_web_development.json
docs/: overview.md  roadmap.md  spec.md  subagent-review-playbook.md
scripts/: README.md  apply_decisions.py  backfill_question_text_reading.py  check_ja_typings.py  decisions_part1.py  decisions_part2.py  decisions_part3.py  generate_questions.py  list_suspect_question_texts.py  quality-spec.md  question_text_stats.py  requirements.txt  restore_ja_question_texts_with_ollama.py  suspicious_ja_typings.json  test_check_ja_typings.py
scripts/migration/: insert_dash_for_chouon.py
src/: config.rs  main.rs  types.rs
src/audio/: cues.rs  mod.rs  tts.rs
src/game/: listening.rs  mod.rs  quiz.rs  typing.rs
src/io/: data_loader.rs  mod.rs  normalize.rs  romaji.rs  storage.rs  typing_texts.rs  validator.rs
src/jiwa_core/: mod.rs  pulse.rs  reveal.rs
src/ui/: help_line.rs  inline_code.rs  input_loop.rs  layout.rs  listen.rs  menu.rs  mod.rs  quiz.rs  records.rs  status.rs  typing.rs
tools/: browse.html
