[package]
name = "type-globe"
version = "0.1.0"
edition = "2021"
authors = ["kako-jun"]
description = "A quiz and typing game that combines learning with skill improvement"
license = "MIT"
homepage = "https://github.com/kako-jun/type-globe"
repository = "https://github.com/kako-jun/type-globe"
documentation = "https://docs.rs/type-globe"
readme = "README.md"
keywords = ["game", "tui", "typing", "quiz"]
categories = ["command-line-utilities", "games"]
exclude = [".github/", "target/"]
rust-version = "1.78.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
