[package]
name = "type-globe"
version = "0.1.2"
edition = "2021"
authors = ["kako-jun"]
description = "A terminal typing game where the answer is never shown before you type it"
license = "MIT"
homepage = "https://github.com/kako-jun/type-globe"
repository = "https://github.com/kako-jun/type-globe"
readme = "README.md"
keywords = ["game", "tui", "typing", "quiz"]
categories = ["command-line-utilities", "games"]
exclude = [".github/", "target/"]
rust-version = "1.78.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
unicode-segmentation = "1.11"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
