[package]
name = "type-globe"
version = "0.7.5"
edition = "2021"
authors = ["kako-jun"]
description = "A terminal typing game where the answer is never shown before you type it"
license = "MIT"
homepage = "https://github.com/kako-jun/type-globe"
repository = "https://github.com/kako-jun/type-globe"
readme = "README.md"
keywords = ["game", "tui", "typing", "quiz"]
categories = ["command-line-utilities", "games"]
exclude = [".github/", "target/"]
rust-version = "1.78.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
unicode-segmentation = "1.11"
tts = "0.26"
rodio = { version = "0.19", default-features = false }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
